--- a/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.scss
+++ b/frontend/Rank-Up/src/app/team-rules-tasks/team-rules-tasks.page.scss
@@ -88,37 +88,40 @@ ion-segment-button {
 
 }
 
-#div-div-rules-tasks-name {
-  height: 8vh;
-  font-size: 2vh;
-  color: var(--ion-color-black);
-  margin: 0;
-  width: 60%;
-  float: left;
-  padding-left: 5vw;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-
-}
-
-#div-div-rules-tasks-button {
-  --background: var(--ion-color-admin);
-  font-size: 2vh;
+.fakebutton {
+  position: absolute;
+  color: black;
+  --background:var(--ion-color-admin);
+  font-size: 3vh;
   --border-radius: 28px;
 
-  color: var(--ion-color-black);
-
-  height: 8vh;
-  width: 40%;
+  height: 7.58vh;
+  width: 35%;
 
   margin: 0;
-  margin-left: 0vh;
-  top: 0;
   right: 0;
-  float: left;
-  font-size: 20px;
-  font-weight: bold;
+  top: 0;
 
-  margin-right: -10vh;
+  &[disabled] {
+      --background: var(--ion-color-light-admin);
+      opacity: 1;
+  }
+}
+
+.label {
+  height: 45px;
+  width: 300px;
+  font-size: large;
+}
+.listBox {
+  margin-top: 1vh;
+  width: 90%;
+  height: 48vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  background-color: transparent;
+}
+
+ion-list{
+  background-color: transparent;
 }
