--- a/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
+++ b/frontend/Rank-Up/src/app/admin-prizes-page/admin-prizes-page.page.html
@@ -13,12 +13,10 @@
 
     <div class="listBox">
       <ion-list class="list">
-        <ion-item-sliding *ngFor="let item of [].constructor(4); let i = index">
+        <ion-item-sliding id="div-rule-task" *ngFor="let item of [].constructor(10); let i = index">
           <ion-item id="div-rule-task">
-          <div id="div-div-rules-tasks">
-            <div id="div-div-rules-tasks-name">[Nome Premio]</div>
-            <ion-button id="div-div-rules-tasks-button">15</ion-button>
-          </div>
+            <ion-label class="label">[Nome Premio]</ion-label>
+          <ion-button class="fakebutton" [disabled]="true">+15</ion-button>
 
         </ion-item>
           <ion-item-options side="end">
