added change photo function

--- a/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-profile/user-profile.page.html
@@ -108,7 +108,7 @@
     <ng-template>
       <ion-header>
         <ion-toolbar>
-          <ion-title>Aggiungi allegato</ion-title>
+          <ion-title>Cambia foto</ion-title>
         </ion-toolbar>
       </ion-header>
       <ion-content>
@@ -121,7 +121,7 @@
 
           <div>
             <app-bt-user-small text="Annulla" (click)="closeModal()" style="padding-right: 0.5vh;"></app-bt-user-small>
-            <app-bt-user-small text="Allega" (click)="attach()" style="padding-left: 0.5vh;"></app-bt-user-small>
+            <app-bt-user-small text="Cambia" (click)="attach()" style="padding-left: 0.5vh;"></app-bt-user-small>
           </div>
         </div>
       </ion-content>
