--- a/frontend/Rank-Up/src/app/signup/signup.page.html
+++ b/frontend/Rank-Up/src/app/signup/signup.page.html
@@ -14,7 +14,7 @@
       <ion-input [(ngModel)]="user.surname" [type]="'text'" [placeholder]="'Cognome'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.email" [type]="'text'" [placeholder]="'Email'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
       <ion-input [(ngModel)]="user.username" [type]="'text'" [placeholder]="'Username'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
-      <ion-input [(ngModel)]="user.password" [type]="'password'" [placeholder]="'Password'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-input [(ngModel)]="password" [type]="'password'" [placeholder]="'Password'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
 
       <app-bt-user-small (click)="signup()" [text]="'Registrati'"></app-bt-user-small>
     </div>
