--- a/frontend/Rank-Up/src/app/search-team/search-team.page.html
+++ b/frontend/Rank-Up/src/app/search-team/search-team.page.html
@@ -8,94 +8,18 @@
     <h1 class="title">Cerca Team</h1>
 
     <div class="searchbar">
-      <app-search-bar></app-search-bar>
+      <app-search-bar (ionInput)="ricerca($event)"></app-search-bar>
     </div>
 
-    <div class="listBox">
-      <ion-grid>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-user">
-                <img fill="clear" sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-admin">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-        </ion-row>
-        <ion-row>
-          <ion-col>
-            <div class="team-card" (click)="presentAlert()">
-              <div class="img-team-user">
-                <img sizes="large" alt="Team" src="../../assets/image/unimol.png" />
-              </div>
-              <div class="team-name">
-                Team
-              </div>
-            </div>
-          </ion-col>
-          <ion-col>
-
-          </ion-col>
-        </ion-row>
-      </ion-grid>
+    <div class="listBox" *ngIf="this.data">
+      <div class="grind">
+        <div class="team-card" (click)="presentAlert()" *ngFor="let i of this.data">
+          <img fill="clear" sizes="large" alt="photo non presente nel db" src={{i.photo}} />
+          <h4 class="team-name">
+            {{i.name}}f
+          </h4>
+        </div>        
+      </div>
     </div>
-
   </div>
 </ion-content>
