--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -18,24 +18,24 @@
     <div class="listBox">
       <ion-list class="notifications" lines="none">
 
-        <ion-item class="itemadmin" *ngFor="let item of [].constructor(3); let i = index" [routerLink]="['/task-rejected']">
+        <ion-item class="itemadmin" *ngFor="let rule of ruleRejected" [routerLink]="['/task-rejected']">
           <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">[Nome Utente]  [Nome Task]  [Data]</ion-label>
+          <ion-label class="label">{{rule.user.name}}  {{rule.rule.name}}  {{rule.timestamp}}</ion-label>
         </ion-item>
 
-        <ion-item class="itemuser" [routerLink]="['/admin-rule-completed']">
+        <ion-item class="itemuser"  *ngFor="let rule of rulecompleted" [routerLink]="['/admin-rule-completed']">
           <ion-icon name="checkmark-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">[Nome Utente]  [Nome Regola]  [Data]</ion-label>
+          <ion-label class="label">{{rule.user.name}}  {{rule.rule.name}}  {{rule.timestamp}}</ion-label>
         </ion-item>
 
-        <ion-item class="itemuser" *ngFor="let item of [].constructor(12); let i = index" [routerLink]="['/completed-task']">
+        <ion-item class="itemuser" *ngFor="let task of taskCompleted" [routerLink]="['/completed-task']">
           <ion-icon name="checkmark-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">[Nome Utente]  [Nome Task]  [Data]</ion-label>
+          <ion-label class="label">{{task.user.name}}  {{task.task}}  {{task.timestamp}}</ion-label>
         </ion-item>
 
-        <ion-item class="itemadmin" [routerLink]="['/rule-rejected']">
+        <ion-item class="itemadmin" *ngFor="let task of  taskRejected" [routerLink]="['/rule-rejected']">
           <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">[Nome Utente]  [Nome Regola]  [Data]</ion-label>
+          <ion-label class="label">{{task.user.name}}  {{task.task}}  {{task.timestamp}}</ion-label>
         </ion-item>
 
       </ion-list>
