--- a/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.scss
+++ b/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.scss
@@ -1,53 +1,112 @@
 .title {
-  text-align: center;
-  font-weight: bold;
-  margin-top: 8vh;
-}
-
-#div-team-name {
+    text-align: center;
+    margin-top: 8vh;
+  }
+  
+  .list {
+    background-color: transparent;
+  }
+  
+  .item {
+    margin-top: 2vh;
+    --background: var(--ion-color-grey);
+    --border-radius: 30px;
+  }
+  
+  ion-item-options {
+    border-radius: 25px;
+    overflow: hidden;
+    background: transparent;
+  
+    ion-item-option {
+        background: transparent;
+    }
+  }
+  
+  ion-segment {
+    --background: var(--ion-color-user);
+    border-radius: 3vh;
+    width: 38vh;
+    height: 5vh;
+  
+    margin-top: 13vh;
+  
+  }
+  
+  ion-segment-button {
+    --border-radius: 3vh;
+    min-height: 2px !important;
+    margin: 0.5vh;
+  }
+  
+  .segmentText {
+    font-size: 1.9vh;
+  }
+  
+  #div-team-name {
     font-size: 1.2em;
-}
-
-#div-code {
+  }
+  
+  #div-code {
     font-size: 0.8em;
     color: var(--ion-color-black);
-}
-
-#div-choice-bar {
+  }
+  
+  #div-choice-bar {
     margin-top: 11vh;
-}
-
-#div-rule-task {
-    margin-top: 2vh;
-}
-
-#div-rules-tasks {
-    margin-top: 2vh;
+  }
+  
+  #div-rules-tasks {
+    margin-top: 0vh;
     overflow: hidden;
     overflow-y: scroll;
     height: 50%;
-}
-
-
-#div-prizes {
-    margin-top: 2vh;
-    overflow: hidden;
-    overflow-y: scroll;
-    height: 50%;
-}
-
-#div-div-rules-tasks {
+  }
+  
+  #div-div-rules-tasks {
     background-color: var(--ion-color-grey);
     font-size: 2vh;
     border-radius: 28px;
-
+  
     height: 8vh;
     width: 80vw;
-}
-
-
-
-#div-div-rules-tasks-name {
+  
+    display: flex;
+    flex-direction: row;
+  
+    overflow: hidden;
+    overflow-y: scroll;
+  
+  }
+  
+  .fakebutton {
+    position: absolute;
+    color: black;
+    --background:var(--ion-color-user);
+    font-size: 3vh;
+    --border-radius: 28px;
+  
+    height: 7.58vh;
+    width: 35%;
+  
+    margin: 0;
+    right: 0;
+    top: 0;
+  
+    &[disabled] {
+        --background: var(--ion-color-user);
+        opacity: 1;
+    }
+  }
+  
+  .label {
+    height: 45px;
+    width: 300px;
+    font-size: 1.3em;
+    margin-left: 3vh;
+  }
+  
+  #div-div-rules-tasks-name {
     height: 8vh;
     font-size: 2vh;
     color: var(--ion-color-black);
@@ -58,44 +117,26 @@
     display: flex;
     align-items: center;
     font-size: 20px;
-}
-
-#div-div-rules-tasks-button {
+  }
+  
+  #div-div-rules-tasks-button {
     --background: var(--ion-color-user);
     font-size: 2vh;
     --border-radius: 28px;
-
+  
     color: var(--ion-color-black);
-
+  
     height: 8vh;
     width: 40%;
-
+  
     margin: 0;
-    margin-right: -10;
+  
+    margin-right: -6vh;
     top: 0;
     right: 0;
     float: left;
     font-size: 20px;
-}
-
-.switch {
-    margin-top: 10vh;
-}
-
-ion-segment {
-    --background: var(--ion-color-user);
-    border-radius: 3vh;
-    width: 38vh;
-    height: 5vh;
-
-}
-
-ion-segment-button {
-    --border-radius: 3vh;
-    min-height: 2px !important;
-    margin: 0.5vh;
-}
-
-.segmentText {
-    font-size: 1.9vh;
-}
+  }
+  
+  
+  
