getTeam Api in rules-and-tasks-rules

--- a/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
+++ b/frontend/Rank-Up/src/app/rules-and-tasks-rules/rules-and-tasks-rules.page.html
@@ -5,8 +5,8 @@
       <ion-icon name="arrow-back-outline" size="large"></ion-icon>
     </ion-button>
 
-    <h1 class="title">{{team_name}}</h1>
-    <div id="div-code">Codice: {{team_code}}</div>
+    <h1 class="title">{{team.name}}</h1>
+    <div id="div-code">Codice: {{team.codice}}</div>
 
     <div class="switch">
       <ion-segment value="Regole" (ionChange)="switch($event)" id="bait">
