--- a/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
+++ b/frontend/Rank-Up/src/app/send-rule/send-rule.page.html
@@ -7,10 +7,10 @@
 
     <h1 align="center" class="title">Regola</h1>
 
-    <div class="description">
-      <app-user-element-bar labelText="[Nome Regola]" buttonText="Regola"></app-user-element-bar>
+    <div class="description" *ngIf="this.data">
+      <app-user-element-bar *ngIf="this.data.ruleName" labelText={{this.data.ruleName}} buttonText="Regola"></app-user-element-bar>
       <br>
-      <app-user-element-bar labelText="[Punti]" buttonText="Punti"></app-user-element-bar>
+      <app-user-element-bar *ngIf="this.data.points" labelText={{this.data.points}} buttonText="Punti"></app-user-element-bar>
     </div>
 
     <div class="buttons">
@@ -42,7 +42,7 @@
 <ion-alert
   trigger="descrizione"
   header="Descrizione"
-  message="[descrizione]"
+  message={{this.data.description}}
   [buttons]="descrBtns"
 ></ion-alert>
 
