--- a/frontend/Rank-Up/src/app/create-team/create-team.page.html
+++ b/frontend/Rank-Up/src/app/create-team/create-team.page.html
@@ -1,38 +1,32 @@
 <ion-content [fullscreen]="true">
   <div class="backgroundAdmin">
 
-    <ion-button class="leftIcon" fill="clear" (click)="backButton()">
-      <ion-icon name="arrow-back-outline" size="large" class="iconaNotifiche"></ion-icon>
-    </ion-button>
-
-
     <h1 class="title">Crea Team</h1>
     <ion-button id="modalAttached" class="insertImage">Inserire Immagine del Team
       <ion-icon slot="end" name="images-outline"></ion-icon>
     </ion-button>
 
-    <h5 class="teamCode">Codice Team</h5>
+    <h4 class="teamCode">Codice Team</h4>
 
     <ion-item>
-      <ion-input class="code" labelPlacement="stacked" [readonly]="true">
-      </ion-input>
+      <ion-input class="code" placeholder="{{this.codiceTeam}}" labelPlacement="stacked" [readonly]="true"></ion-input>
     </ion-item>
 
-    <h5 class="insertName">Inserire Nome del Team</h5>
-    <app-input class="teamName" [placeholder]="'Nome Team'"></app-input>
+    <h4 class="insertName">Inserire Nome del Team</h4>
+    <ion-input [(ngModel)]="this.nomeTeam" fill="outline" shape="round" mode="md" class="formInput" class="teamName" [placeholder]="'Nome Team'"></ion-input>
 
     <ion-item class="membersquare">
-      <ion-icon class="icon" name="person-add-outline"  [routerLink]="['/admin/add-user']"></ion-icon>
+      <ion-icon class="icon" name="person-add-outline" [routerLink]="['/admin/add-user']"></ion-icon>
     </ion-item>
-      <ion-label class="memberlabel">Aggiungi Membro</ion-label>
+    <ion-label class="memberlabel">Aggiungi Membro</ion-label>
 
-      <ion-item class="rulesquare">
-        <ion-icon class="icon" name="calendar-outline" [routerLink]="['/create-rule']"></ion-icon>
-      </ion-item>
-        <ion-label class="rulelabel">Aggiungi Regola</ion-label>
+    <ion-item class="rulesquare">
+      <ion-icon class="icon" name="calendar-outline" [routerLink]="['/create-rule']"></ion-icon>
+    </ion-item>
+    <ion-label class="rulelabel">Aggiungi Regola</ion-label>
 
     <ion-button class="privacyTeam" (click)="presentAlert()">Privacy Team</ion-button>
-    <ion-button class="createTeam" [routerLink]="['/admin/admin-home-team']">Crea Team</ion-button>
+    <ion-button class="createTeam" (click)="navigate()">Crea Team</ion-button>
 
   </div>
 
