--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -30,12 +30,12 @@
 
         <ion-item class="itemuser" *ngFor="let task of taskCompleted" [routerLink]="['/completed-task']">
           <ion-icon name="checkmark-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{task.user.name}}  {{task.task}}  {{task.timestamp}}</ion-label>
+          <ion-label class="label">{{task.user.name}}  {{task.task.name}}  {{task.timestamp}}</ion-label>
         </ion-item>
 
         <ion-item class="itemadmin" *ngFor="let task of  taskRejected" [routerLink]="['/rule-rejected']">
           <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{task.user.name}}  {{task.task}}  {{task.timestamp}}</ion-label>
+          <ion-label class="label">{{task.user.name}}  {{task.task.name}}  {{task.timestamp}}</ion-label>
         </ion-item>
 
         <ion-item class="itemadmin" [routerLink]="['/task-rejected']" *ngFor="let i of this.data">
