--- a/frontend/Rank-Up/src/app/participants/participants.page.html
+++ b/frontend/Rank-Up/src/app/participants/participants.page.html
@@ -25,34 +25,23 @@
 
     <div class="listBox" *ngIf="stato">
       <ion-list class="list" lines="none">
-          <ion-item class="item" *ngFor="let item of [].constructor(4); let i = index">
+          <ion-item class="item" *ngFor="let p of partecipantsPoints; let i = index">
             <div class="item-div">
-            <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">Utente {{i+1}}</ion-label>
-            <ion-label class="points-label">{{i+2*i}}</ion-label>
+              <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+              <ion-label class="nomeUtente">{{partecipants[i].username}}</ion-label>
+              <ion-label class="points-label">{{p.points}}</ion-label>
             </div>
-          </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
+          </ion-item>   
       </ion-list>
     </div>
     <div class="listBox" *ngIf="!stato">
       <ion-list class="list" lines="none">
-
-          <ion-item class="item" *ngFor="let item of [].constructor(10); let i = index">
+        <ion-item class="item" *ngFor="let u of partecipants">
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">Utente {{i+1}}</ion-label>
+            <ion-label class="nomeUtente">{{u.username}}</ion-label>
             </div>
           </ion-item>
-          <ion-item-options side="end">
-            <ion-item-option>
-              <ion-icon name="trash-outline" size="large" color="danger"></ion-icon>
-            </ion-item-option>
-          </ion-item-options>
       </ion-list>
     </div>
   </div>
