--- a/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
+++ b/frontend/Rank-Up/src/app/user-team-profile/user-team-profile.page.html
@@ -35,9 +35,9 @@
 
     <div class="listBox" *ngIf="!stato">
       <ion-list>
-        <ion-item class="item" *ngFor="let item of [].constructor(15); let i = index">
-          <ion-label class="label">Premio {{i}}</ion-label>
-          <ion-button class="fakebutton" [disabled]="true">{{-i*i}} pt</ion-button>
+        <ion-item class="item" *ngFor="let prize of prizes">
+          <ion-label class="label">{{prize.name}}</ion-label>
+          <ion-button class="fakebutton" [disabled]="true">{{prize.price}} pt</ion-button>
         </ion-item>
       </ion-list>
     </div>
