--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -29,7 +29,7 @@
           <ion-item class="item" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">{{user}}</ion-label>
+            <ion-label class="nomeUtente">{{user.name}}</ion-label>
             <ion-label class="points-label"></ion-label>
             </div>
 
@@ -49,7 +49,7 @@
           <ion-item class="item" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">{{user}}</ion-label>
+            <ion-label class="nomeUtente">{{user.name}}</ion-label>
             <ion-label class="points-label"></ion-label>
             </div>
           </ion-item>
