--- a/frontend/Rank-Up/src/app/request-history/request-history.page.html
+++ b/frontend/Rank-Up/src/app/request-history/request-history.page.html
@@ -18,31 +18,11 @@
     <div class="listBox">
       <ion-list class="notifications" lines="none">
 
-        <ion-item class="itemadmin" *ngFor="let rule of ruleRejected" [routerLink]="['/task-rejected']">
+        <ion-item class="itemadmin" *ngFor="let activity of history" [routerLink]="['/task-rejected']">
           <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{rule.user.name}}  {{rule.rule.name}}  {{rule.timestamp}}</ion-label>
+          <ion-label class="label">{{activity.user.name}}  {{activity.rule.name}} {{activity.timestamp}}</ion-label>
         </ion-item>
-
-        <ion-item class="itemuser"  *ngFor="let rule of rulecompleted" [routerLink]="['/admin-rule-completed']">
-          <ion-icon name="checkmark-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{rule.user.name}}  {{rule.rule.name}}  {{rule.timestamp}}</ion-label>
-        </ion-item>
-
-        <ion-item class="itemuser" *ngFor="let task of taskCompleted" [routerLink]="['/completed-task']">
-          <ion-icon name="checkmark-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{task.user}}  {{task.task.name}}  {{task.timestamp}}</ion-label>
-        </ion-item>
-
-        <ion-item class="itemadmin" *ngFor="let task of  taskRejected" [routerLink]="['/rule-rejected']">
-          <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{task.user}}  {{task.task.name}}  {{task.timestamp}}</ion-label>
-        </ion-item>
-
-        <ion-item class="itemadmin" [routerLink]="['/task-rejected']" *ngFor="let i of this.data">
-          <ion-icon name="close-circle-outline" size="small" class="icon"></ion-icon>
-          <ion-label class="label">{{this.data}} {{this.data}}  {{this.data}}</ion-label>
-        </ion-item>
-
+        
       </ion-list>
     </div>
 
