--- a/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.html
+++ b/frontend/Rank-Up/src/app/task-confirmation/task-confirmation.page.html
@@ -5,8 +5,8 @@
         <div class="barra" (click)="mostra()"></div>
       </div>
       <h1 class="hde">Attività confermata</h1>
-      <app-input [type]="'text'" [placeholder]="'Bonus/Malus'"></app-input>
-      <app-input [type]="'text'" [placeholder]="'Commento'"></app-input>
+      <ion-input [(ngModel)]="bonusPoints" [type]="'number'" [placeholder]="'Bonus/Malus'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
+      <ion-input [(ngModel)]="comment" [type]="'text'" [placeholder]="'Commento'" fill="outline" shape="round" mode="md" class="formInput"></ion-input>
     </div>
 
     <div class="chiuso" *ngIf="!stato">
@@ -26,13 +26,13 @@
     <div class="subTitle">Accettare richiesta di completamento?</div>
     <div class="pulsanteBox">
       <div class="titoloBox">
-        <ion-button (click)="presentAlert()" class="pulsante rifiuta">
+        <ion-button (click)="presentAlertReject()" class="pulsante rifiuta">
           <ion-icon name="close-circle-outline"></ion-icon>
         </ion-button>
         <div class="text">Rifiuta</div>
       </div>
       <div class="titoloBox">
-        <ion-button (click)="presentAlert()" class="pulsante conferma">
+        <ion-button (click)="presentAlertConfirm()" class="pulsante conferma">
           <ion-icon name="checkmark-circle-outline"></ion-icon>
         </ion-button>
         <div class="text">Accetta</div>
