linked admin-list page with admin-profile page

--- a/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
+++ b/frontend/Rank-Up/src/app/admin-list/admin-list.page.html
@@ -24,12 +24,12 @@
     </div>
 
     <div class="listBox" *ngIf="stato">
-      <ion-list class="list" lines="none">
+      <ion-list class="list" lines="none" *ngFor="let user of users">
         <ion-item-sliding *ngFor="let userJoin of usersJoinsTeam">
-          <ion-item class="item" [routerLink]="['/admin/admin-profile']">
+          <ion-item class="item" (click)="clickUser(user, userJoin)" [routerLink]="['/admin/admin-profile']" >
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">{{userJoin.key.idUser}}</ion-label>
+            <ion-label class="nomeUtente">{{user.name}}</ion-label>
             <ion-label class="points-label">{{userJoin.points}}</ion-label>
             </div>
 
@@ -44,12 +44,12 @@
     </div>
 
     <div class="listBox" *ngIf="!stato">
-      <ion-list class="list" lines="none">
-        <ion-item-sliding *ngFor="let userJoin of usersJoinsTeam; let i = index">
-          <ion-item class="item" [routerLink]="['/admin/admin-profile']">
+      <ion-list class="list" lines="none"  *ngFor="let user of users">
+        <ion-item-sliding *ngFor="let userJoin of usersJoinsTeam">
+          <ion-item class="item" (click)="clickUser(user, userJoin)" [routerLink]="['/admin/admin-profile']">
             <div class="item-div">
             <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-            <ion-label class="nomeUtente">{{userJoin.key.idUser}}</ion-label>
+            <ion-label class="nomeUtente">{{user.name}}</ion-label>
             <ion-label class="points-label">{{userJoin.points}}</ion-label>
             </div>
           </ion-item>
