--- a/frontend/Rank-Up/src/app/add-user/add-user.page.html
+++ b/frontend/Rank-Up/src/app/add-user/add-user.page.html
@@ -13,14 +13,14 @@
         <ion-item-sliding *ngFor="let user of users">
           <ion-item class="item">
             <div class="item-div">
-            <img class="imgUser" alt="User" src="https://www.diregiovani.it/wp-content/uploads/2018/11/wilfred.jpg">
+            <img class="imgUser" alt="User" src="https://ionicframework.com/docs/img/demos/avatar.svg">
             <ion-label class="nomeUtente">{{user.username}}</ion-label>
             </div>
 
           </ion-item>
           <ion-item-options side="end">
             <ion-item-option class="option-one">
-              <ion-icon slot="top" name="person-add-outline" size="large" (click)="addAdmin(user.id)"></ion-icon>
+              <ion-icon slot="top" name="person-add-outline" size="large"></ion-icon>
               Admin
             </ion-item-option>
             <ion-item-option class="option-two">
