--- a/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
+++ b/frontend/Rank-Up/src/app/admin-profile/admin-profile.page.html
@@ -5,11 +5,11 @@
     </ion-button>
 
     <img class="imgUser" alt="Utente" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-    <h1 class="nameUser">[Nome Utente]</h1>
-    <h2 class="scoreUser">Punti: 100</h2>
+    <h1 class="nameUser">{{user.name}}</h1>
+    <h2 class="scoreUser">Punti: {{userJoin.points}}</h2>
 
     <div class="switch">
-      <ion-segment value=1 (ionChange)="segmentChanged($event)" id="bait"> 
+      <ion-segment value=1 (ionChange)="segmentChanged($event)" id="bait">
         <ion-segment-button value=1>
           <ion-label class="segmentText">Compiti completati</ion-label>
         </ion-segment-button>
@@ -17,7 +17,7 @@
           <ion-label class="segmentText">Premi riscossi</ion-label>
         </ion-segment-button>
       </ion-segment>
-    </div> 
+    </div>
 
 
 
